# teal-ur5

./: README.md  ur5_teal.perspective
launch/: ur5_teal.launch  ur5_teal_driver.launch
scripts/: cameraRobo.py  controlGripper.py  finger_joint_controller.py  joint_pub.py  moverobo.py  robo.py  test.py  test_cameraRobo.py  ur5_gripper.py
ur5_teal_bringup/: CMakeLists.txt  package.xml
ur5_teal_bringup/config/: ur5_kinematics.yaml
ur5_teal_bringup/launch/: ur5_teal_rviz.launch
ur5_teal_bringup/scripts/: action_client.py  robo.py  test_cameraRobo.py  ur5_gripper.py
ur5_teal_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_teal_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  robot.srdf  ros_controllers.yaml  ur5_config.rviz
ur5_teal_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ur5_teal_description/: CMakeLists.txt  package.xml  ur5.code-workspace
ur5_teal_description/xacro/: ur5_arm.urdf.xacro
